# minilucy

./: .gitignore  dune-project
.github/workflows/: main.yml
lib/: asttypes.ml  clocked_ast.ml  dune  ident.ml  lexer.mll  load.ml  parse_ast.ml  parser.mly  pp_untyped.ml  typed_ast.ml  untyped_ast.ml
test/: dune  test.ml
